# hebo

./: .cursorrules  .dockerignore  .env.example  .gitignore  .prettierignore  AGENTS.md  LICENSE.md  README.md  docker-compose.yaml  docker-compose.yml  eslint.config.mjs  lefthook.yml  next.config.ts  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sst-env.d.ts  sst.config.ts  sst.dev.config.ts  tsconfig.base.json  turbo.json
.github/workflows/: deploy.yml  publish.yml  quality.yml  web.yml
apps/api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  catalog-data.json  deploy.sh  docker-compose.yml  drizzle.config.ts  package.json  tsconfig.json
apps/app/: .env.example  jest.config.mjs  mdx-components.tsx  next.config.ts  (+4 more)
backend/: .env.template  README.md  settings.py
docker/: backend.Dockerfile
docs/: analytics.md
infra/: .env.example  .secrets.example  README.md  package.json  tsconfig.json
proxy/: .env.template  config.py  main.py  pyproject.toml
proxy/auth/: middleware.py
proxy/db/: database.py
proxy/schemas/: agent_settings.py  ai.py  knowledge.py
proxy/services/: retriever.py  thread_manager.py  utils.py
proxy/services/ai/: conversations.py  dummy.py  langfuse_utils.py  llms.py  tools.py  vision.py
scripts/: configure-bedrock-access.sh  configure-vertex-access.sh  provision-bedrock-role-nonprod.sh  provision-bedrock-role-prod.sh  provision-bedrock-role.sh  provision-vertex-provider-nonprod.sh  provision-vertex-provider-prod.sh  provision-vertex-sa.sh  secrets.ts  tsconfig.json
src/: stack.tsx
(+467 files in other folders)
