[project]
name = "proxy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.115.6",
    "httpx>=0.28.1",
    "langchain-aws>=0.2.10",
    "langchain>=0.3.14",
    "langchain-core>=0.3.29",
    "pydantic-settings>=2.7.0",
    "langfuse>=2.57.5",
    "pillow>=11.1.0",
    "voyageai>=0.3.2",
    "uvicorn>=0.34.0",
    "mcp[cli]>=1.4.1",
    "langchain-mcp-adapters>=0.0.5",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
]
