[project]
name = "proxy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.115.6",
    "httpx>=0.28.1",
    "langchain-aws==0.2.18",
    "boto3==1.37.29",
    "botocore==1.37.29",
    "langchain>=0.3.14",
    "langchain-core>=0.3.29",
    "pydantic-settings>=2.7.0",
    "langfuse>=2.57.5",
    "pillow>=11.1.0",
    "voyageai>=0.3.2",
    "uvicorn>=0.34.0",
    "mcp[cli]==1.6.0",
    "langchain-mcp-adapters==0.0.9",
    "langchain-openai>=0.3.11",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
]
